Actualización: contenidos de despliegue